--- a/templates/default.html
+++ b/templates/default.html
@@ -31,7 +31,9 @@
               <a class="large-3 columns" href="https://twitter.com/pamojarpan"><i class="icon-twitter"></i></a>
               <a class="large-3 columns" href="https://github.com/damianfral"><i class="icon-github"></i></a>
               <a class="large-3 columns" href="http://www.linkedin.com/profile/view?id=201155207"><i class="icon-linkedin"></i></a>
-              <a class="large-3 columns" href="/atom.xml"><i class="icon-rss"></i></a>
+              <a class="large-3 columns" href="http://feeds.feedburner.com/damianfral-blog">
+                <i class="icon-rss"></i>
+              </a>
             </div>
           </div>
         </header>
