--- a/templates/default.html
+++ b/templates/default.html
@@ -23,19 +23,21 @@
     <div class="row">
       <div id="wrapper" class="small-12 large-10 large-centered columns">
         <header class="row">
-          <div class="small-10 large-8 columns">
+          <div class="large-8 small-6 columns">
             <a id="home" href="/">Damián Franco Álvarez's blog</a>
           </div>
-          <div class="large-4 columns hide-for-small show-for-large">
+
+          <div class="large-4 small-6 columns">
             <div id="contact-links" class="row">
-              <a class="large-3 columns" href="https://twitter.com/pamojarpan"><i class="icon-twitter"></i></a>
-              <a class="large-3 columns" href="https://github.com/damianfral"><i class="icon-github"></i></a>
-              <a class="large-3 columns" href="http://www.linkedin.com/profile/view?id=201155207"><i class="icon-linkedin"></i></a>
-              <a class="large-3 columns" href="http://feeds.feedburner.com/damianfral-blog">
+              <a class="large-3 small-3 columns" href="https://twitter.com/pamojarpan"><i class="icon-twitter"></i></a>
+              <a class="large-3 small-3 columns" href="https://github.com/damianfral"><i class="icon-github"></i></a>
+              <a class="large-3 small-3 columns" href="http://www.linkedin.com/profile/view?id=201155207"><i class="icon-linkedin"></i></a>
+              <a class="large-3 small-3 columns" href="http://feeds.feedburner.com/damianfral-blog">
                 <i class="icon-rss"></i>
               </a>
             </div>
           </div>
+
         </header>
         <hr/>
         <div class="row">
