--- a/templates/post-item.html
+++ b/templates/post-item.html
@@ -1,3 +1,5 @@
-<li>
-    <a href="$url$">$title$</a> - $date$
+<li class="row">
+	<div class="large-12 columns">
+    	$date$ - <a href="$url$">$title$ - </a>
+    <div>
 </li>
