Font's paths bug fixed.

--- a/css/fontfaces.css
+++ b/css/fontfaces.css
@@ -1,1 +1,1 @@
-@font-face{font-family:"League Gothic Regular";src:url("/fonts/league-gothic-regular.woff")}@font-face{font-family:"Crimson Roman";src:url("/fonts/crimson-roman.woff")}
+@font-face{font-family:"League Gothic Regular";src:url("../fonts/league-gothic-regular.woff")}@font-face{font-family:"Crimson Roman";src:url("../fonts/crimson-roman.woff")}
