New post: A command line todo list manager written in Haskell. Small changes in css/default.styl."

--- a/css/default.styl
+++ b/css/default.styl
@@ -88,6 +88,10 @@ article
 	p, li
 		font-size: 1.3em
 		width: 100%
+	
+	p > code
+		font-size: 0.9em
+		background-color: #EEE
 
 	code
 		font-size: 1.2em
