--- a/css/default.css
+++ b/css/default.css
@@ -139,6 +139,10 @@ article li {
   font-size: 1.3em;
   width: 100%;
 }
+article p > code {
+  font-size: 0.9em;
+  background-color: #eee;
+}
 article code {
   font-size: 1.2em;
 }
