default.styl changed to remove extra margins in MathJax divs.

--- a/css/default.styl
+++ b/css/default.styl
@@ -147,9 +147,10 @@ img, pre
 
 .MathJax
 	font-size: 200% !important
+
 .MathJax_Display
 	width: 100% !important
-
+	margin: -2em !important
 
 pre
 	background-color: #EEE
@@ -161,7 +162,5 @@ pre
 	margin: 0 auto
 
 #comments
-{
 	background-color: #EEE
 	opacity: 0
-}
