New post: A command-line todo list manager written in Haskell

--- a/css/default.styl
+++ b/css/default.styl
@@ -164,3 +164,11 @@ pre
 #comments
 	background-color: #EEE
 	opacity: 0
+
+blockquote
+	background-color: #EEE
+	margin: 0
+	padding: 1em
+	font-style: italic
+	p
+		margin: 0em
