--- a/css/default.css
+++ b/css/default.css
@@ -221,3 +221,12 @@ pre {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
 }
+blockquote {
+  background-color: #eee;
+  margin: 0;
+  padding: 1em;
+  font-style: italic;
+}
+blockquote p {
+  margin: 0em;
+}
