--- a/css/default.css
+++ b/css/default.css
@@ -1,18 +1,82 @@
 html,
 body {
-  width: 100%;
-  overflow-x: hidden;
   color: #333;
   font-family: 'Crimson Roman';
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  min-height: 100vh;
 }
-body {
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+main,
+#disqus_thread {
+  max-width: 50rem;
+  margin: 0 auto;
+}
+header,
+footer {
+  text-align: center;
+  padding: 1vw;
+  font-size: 1.7em;
+  background-color: #222;
+  width: 100%;
+}
+header a,
+footer a {
+  color: #d33;
+  text-decoration: none;
+}
+footer a {
+  margin: 8px;
+}
+#comments {
+  background-color: #eee;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  border-sizing: border-box;
+  display: none;
+  width: 100%;
+}
+.flex-row,
+.flex-column,
+.flex-images {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: box;
   display: flex;
-  min-height: 100%;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  -ms-flex-line-pack: center;
+  -webkit-align-content: center;
+  align-content: center;
+}
+.flex-row,
+.flex-images {
+  -webkit-box-orient: horizontal;
+  -moz-box-orient: horizontal;
+  -o-box-orient: horizontal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+.flex-column {
   -webkit-box-orient: vertical;
   -moz-box-orient: vertical;
   -o-box-orient: vertical;
@@ -20,16 +84,32 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
 }
-header,
-footer {
-  padding: 1vw;
-  font-size: 1.7em;
-  background-color: #222;
+.flex-cell,
+.flex-images div {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  -webkit-align-self: center;
+  align-self: center;
+  -ms-flex-item-align: center;
 }
-header a,
-footer a {
-  color: #d33;
-  text-decoration: none;
+.flex-images {
+  margin: 0px;
+  padding: 0px;
+}
+.flex-images div {
+  margin-right: 8px;
+  margin-bottom: 2px;
+}
+img {
+  padding: 0px;
+  max-width: 100%;
+  border: solid 2px #111;
+  margin: 0 auto;
 }
 header a:hover,
 header a:focus,
@@ -39,8 +119,6 @@ footer a:focus {
   text-decoration: none;
 }
 a {
-  -moz-transition: 0.2s color linear;
-  -webkit-transition: 0.2s color linear;
   -webkit-transition: 0.2s color linear;
   -moz-transition: 0.2s color linear;
   -o-transition: 0.2s color linear;
@@ -56,44 +134,6 @@ a:focus {
 }
 footer,
 #comments {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -moz-box-orient: vertical;
-  -moz-box-direction: normal;
-  -ms-flex-direction: column;
-  -webkit-box-orient: vertical;
-  -moz-box-orient: vertical;
-  -o-box-orient: vertical;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -moz-box-align: center;
-  -ms-flex-align: center;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
   padding: 1.5rem;
   font-size: 2em;
   text-align: center;
@@ -108,18 +148,19 @@ header {
   text-transform: uppercase;
   width: 100%;
 }
-li {
+h1,
+h2,
+h3,
+h4 {
+  margin-bottom: 0px;
+}
+ul > li {
   list-style: disc;
   margin-left: 1.2em;
 }
-article {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -o-box-flex: 1;
-  box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+ol > li > a {
+  margin-left: 1em;
+  margin-right: 1em;
 }
 article h1 {
   font-size: 1.7em;
@@ -153,23 +194,13 @@ article li {
 .posts {
   font-size: 1.3em;
 }
-h1,
-h2,
-h3,
-h4 {
-  margin-bottom: 0px;
-}
-img,
 pre {
   position: relative;
   margin-bottom: 1.25em;
-  -moz-object-fit: contain;
   border: solid 0.2rem #222;
   width: 100%;
 }
 .article-title {
-  margin-top: 0px;
-  margin-bottom: 0px;
   font-size: 2.5em;
 }
 .date {
@@ -192,7 +223,7 @@ pre {
   overflow-x: auto;
 }
 .sourceCode.Coffeescript > code {
-  color: #333;
+  color: rgba(51,51,255,0.2);
 }
 #wrapper {
   color: #223;
@@ -206,20 +237,56 @@ pre {
   width: 100% !important;
   margin: -2em !important;
 }
+#social {
+  -ms-flex-line-pack: end;
+  -webkit-align-content: flex-end;
+  align-content: flex-end;
+  -webkit-box-flex: 20;
+  -moz-box-flex: 20;
+  -o-box-flex: 20;
+  box-flex: 20;
+  -webkit-flex: 20 20;
+  -ms-flex: 20 20;
+  flex: 20 20;
+  position: relative;
+  left: 40px;
+}
+#license {
+  min-width: 80px;
+  font-size: 0.5em;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1 0;
+  -ms-flex: 1 0;
+  flex: 1 0;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -o-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-line-pack: center;
+  -webkit-align-content: center;
+  align-content: center;
+  -webkit-align-self: center;
+  align-self: center;
+  -ms-flex-item-align: center;
+}
+a {
+  margin: 0;
+}
 pre {
   background-color: #eee;
   padding: 8px;
   width: 100%;
-}
-.Container {
-  max-width: 50rem;
-  margin: 0 auto;
-}
-#comments {
-  background-color: #eee;
-  opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0);
 }
 blockquote {
   background-color: #eee;
