--- a/templates/default.html
+++ b/templates/default.html
@@ -10,7 +10,7 @@
 		<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Damián Franco Álvarez's blog - ATOM Feed">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-
+		<link rel="stylesheet" type="text/css" href="http://necolas.github.io/normalize.css/3.0.0/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 		<link rel="stylesheet" type="text/css" href="/css/fontfaces.css" />
 		<link rel="stylesheet" type="text/css" href="/css/font-awesome.css" />
